# spareto

./: .gitignore  LICENSE  README.md  dataparallel.py  engine.py  requirements.txt  run.sh  run_tests.sh  train.py  visualize.py
configs/: cityscapes.yaml  commons.py  config.yaml  levit256.py
cpp/: .clang-format  CMakeLists.txt  README.md  build.sh
helpers/: datasetup.py  graphs.py  metrics.py  utils.py
models/: levit.py  maskrcnn.py  toymod.py  unet.py  unetreal.py
models/backbone/: generics.py  resnet.py
python/: config.py  run.sh
scripts/: debug.sh  download_data.sh  run.sh
